Jump Menu Fix
For sticky nav

--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,7 @@ picture {
 #jump-menu {
   width: 100%;
   padding: 5px 20px;
-  padding-right: 40px;
+  padding-right: 80px;
   background: #fff8f0;
   left: 0;
   box-shadow: 0 2px 5px #131e20;
